[package]
name = "tg4-engagement"
version = "0.6.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Simple TG4 implementation of group membership controlled by an admin"
repository = "https://github.com/confio/poe-contracts"
homepage = "https://tgrade.finance"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.11.1"
cw2 = "0.11.1"
cw-controllers = "0.11.1"
cw-storage-plus = "0.11.1"
tg4 = { path = "../../packages/tg4", version = "0.6.1" }
tg-utils = { version = "0.6.1", path = "../../packages/utils" }
tg-bindings = { version = "0.6.1", path = "../../packages/bindings" }
cosmwasm-std = { version = "1.0.0-beta5" }
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta5" }
cw-multi-test = { version = "0.11.1" }
tg-bindings-test = { version = "0.6.1", path = "../../packages/bindings-test" }
derivative = "2"
anyhow = "1"
