[package]
name = "tg4-engagement"
version = "0.17.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Simple TG4 implementation of group membership controlled by an admin"
repository = "https://github.com/confio/poe-contracts"
homepage = "https://tgrade.finance"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.9"
cw-controllers = "1.0.0"
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.0"
tg-utils = { version = "0.17.1", path = "../../packages/utils" }
tg-bindings = { version = "0.17.1", path = "../../packages/bindings" }
tg4 = { path = "../../packages/tg4", version = "0.17.1" }
schemars = "0.8"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.21"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.1.9"
cw-multi-test = "0.16.2"
derivative = "2"
tg-bindings-test = { version = "0.17.1", path = "../../packages/bindings-test" }
