[package]
name = "tg4-group"
version = "0.14.0"
authors = ["Mauro Lacy <mauro@confio.gmbh>"]
edition = "2018"
description = "Simple tg4 implementation of group membership controlled by admin"
license = "Apache-2.0"
repository = "https://github.com/confio/poe-contracts"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.0"
cw-utils = "0.14.0"
cw2 = "0.14.0"
cw4 = "0.14.0"
cw-controllers = "0.14.0"
cw-storage-plus = "0.14.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tg4 = { version = "0.14.0", path = "../../packages/tg4" }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = "1.1.0"
