[package]
name = "tg4-mixer"
version = "0.17.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "TG4 implementation that combines two different groups with a merge function"
repository = "https://github.com/confio/poe-contracts"
homepage = "https://tgrade.finance"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
# See https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.9"
cw-utils = "1.0.1"
cw2 = "1.0.0"
cw20 = "0.16.0"
cw-storage-plus = "1.0.1"
integer-sqrt = "0.1.5"
rust_decimal = { version = "1.16", default-features = false, features = ["maths"] }
rust_decimal_macros = { version = "1.16", default-features = false }
thiserror = "1.0.21"
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tg4 = { path = "../../packages/tg4", version = "0.17.1" }
tg-utils = { path = "../../packages/utils", version = "0.17.1" }
tg-bindings = { path = "../../packages/bindings", version = "0.17.1" }

[dev-dependencies]
cosmwasm-schema = "1.1.9"
# bench dependencies
cosmwasm-vm = { version = "1.1.0" }
cw-multi-test = "0.16.2"
tg4-engagement = { path = "../tg4-engagement", version = "0.17.1", features = ["library"] }
tg4-stake = { path = "../tg4-stake", version = "0.17.1", features = ["library"] }

[[bench]]
name = "main"
harness = false
