[package]
name = "tg4-stake"
version = "0.7.0-alpha2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "TG4 implementation of group based on staked tokens"
repository = "https://github.com/confio/poe-contracts"
homepage = "https://tgrade.finance"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13.1"
cw2 = "0.13.1"
cw-controllers = "0.13.1"
cw-storage-plus = "0.13.1"
tg4 = { path = "../../packages/tg4", version = "0.7.0-alpha2" }
tg-utils = { path = "../../packages/utils", version = "0.7.0-alpha2" }
tg-bindings = { path = "../../packages/bindings", version = "0.7.0-alpha2" }
cosmwasm-std = "1.0.0-beta6"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }
itertools = "0.10"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta6" }
tg-bindings-test = { path = "../../packages/bindings-test", version = "0.7.0-alpha2" }
