[package]
name = "tg4-stake"
version = "0.11.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "TG4 implementation of group based on staked tokens"
repository = "https://github.com/confio/poe-contracts"
homepage = "https://tgrade.finance"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw-utils = "0.13.4"
cw2 = "0.13.4"
cw-controllers = "0.13.4"
cw-storage-plus = "0.13.4"
itertools = "0.10"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tg4 = { path = "../../packages/tg4", version = "0.11.0" }
tg-utils = { path = "../../packages/utils", version = "0.11.0" }
tg-bindings = { path = "../../packages/bindings", version = "0.11.0" }
thiserror = "1.0.21"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
tg-bindings-test = { path = "../../packages/bindings-test", version = "0.11.0" }
