[package]
name = "tgrade-gov-reflect"
version = "0.5.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "1.0.0-beta"
cw-storage-plus = "0.11.0"
tg-bindings = { version = "0.5.2", path = "../../packages/bindings" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta"
