[package]
name = "tgrade-validator-voting"
version = "0.6.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implementing tgrade-validator-voting"
repository = "https://github.com/confio/poe-contracts"
homepage = "https://tgrade.finance"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = "0.11.1"
tg3 = { path = "../../packages/tg3", version = "0.6.1" }
cosmwasm-std = "1.0.0-beta5"
schemars = "0.8.1"
serde = { version = "1", default-features = false, features = ["derive"] }
tg-bindings = { path = "../../packages/bindings", version = "0.6.1" }
tg-utils = { path = "../../packages/utils", version = "0.6.1" }
tg-voting-contract = { version = "0.6.1", path = "../../packages/voting-contract" }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = "1.0.0-beta5"
cw-multi-test = "0.11.1"
cw-storage-plus = "0.11.1"
tg-bindings-test = { version = "0.6.1", path = "../../packages/bindings-test" }
tg-utils = { version = "0.6.1", path = "../../packages/utils" }
tg-voting-contract = { version = "0.6.1", path = "../../packages/voting-contract" }
tg4 = { path = "../../packages/tg4", version = "0.6.1" }
tg4-engagement = { path = "../tg4-engagement", version = "0.6.1", features = ["library"] }
