[package]
name = "tgrade-valset"
version = "0.13.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Control the validator set based on membership of trusted tg4 contract"
repository = "https://github.com/confio/poe-contracts"
homepage = "https://tgrade.finance"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
# See https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
integration = ["bech32", "cosmwasm-vm"]

[dependencies]
cosmwasm-std = "1.0.0"
cw2 = "0.13.4"
cw-utils = "0.13.4"
cw-controllers = "0.13.4"
cw-storage-plus = "0.13.4"
schemars = "0.8"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.21"
tg4 = { path = "../../packages/tg4", version = "0.13.0" }
tg-bindings = { version = "0.13.0", path = "../../packages/bindings" }
tg-utils = { version = "0.13.0", path = "../../packages/utils" }

# For integration tests ("integration" feature)
bech32 = { version = "0.8.1", optional = true }
cosmwasm-vm = { version = "1.0.0", optional = true, default-features = false, features = ["iterator"] }

[dev-dependencies]
anyhow = "1"
assert_matches = "1.5"
cosmwasm-schema = "1.0.0"
# bench dependencies
cosmwasm-vm = { version = "1.0.0" }
cw-multi-test = "0.13.4"
derivative = "2"
hex-literal = "0.3"
tg4-engagement = { path = "../tg4-engagement", version = "0.13.0" }
tg4-stake = { path = "../tg4-stake", version = "0.13.0" }
# we enable multitest feature only for tests
tg-bindings-test = { path = "../../packages/bindings-test", version = "0.13.0" }

[[bench]]
name = "main"
harness = false
