[package]
name = "tgrade-valset"
version = "0.17.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Control the validator set based on membership of trusted tg4 contract"
repository = "https://github.com/confio/poe-contracts"
homepage = "https://tgrade.finance"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
integration = ["bech32"]

[dependencies]
cosmwasm-std = "1.1.9"
cw2 = "1.0.0"
cw-utils = "1.0.1"
cw-controllers = "1.0.0"
cw-storage-plus = "1.0.1"
schemars = "0.8"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.21"
tg4 = { path = "../../packages/tg4", version = "0.17.1" }
tg-bindings = { version = "0.17.1", path = "../../packages/bindings" }
tg-utils = { version = "0.17.1", path = "../../packages/utils" }

# For integration tests ("integration" feature)
bech32 = { version = "0.8.1", optional = true }

[dev-dependencies]
anyhow = "1"
assert_matches = "1.5"
cosmwasm-schema = "1.1.9"
cosmwasm-vm = { version = "1.1.0", default-features = false, features = ["iterator"] }
cw-multi-test = "0.16.2"
derivative = "2"
tg4-engagement = { path = "../tg4-engagement", version = "0.17.1" }
tg4-stake = { path = "../tg4-stake", version = "0.17.1" }
# we enable multitest feature only for tests
tg-bindings-test = { path = "../../packages/bindings-test", version = "0.17.1" }
