[package]
name = "tgrade-vesting-account"
version = "0.5.2"
authors = ["Jakub Bogucki <jakub@confio.gmbh>"]
edition = "2018"
description = "Vesting Account as a contract"
repository = "https://github.com/confio/tgrade-contracts"
homepage = "https://tgrade.finance"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0-beta"
cw-utils = "0.11.0"
cw2 = "0.11.0"
cw-storage-plus = "0.11.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tg-bindings = { version = "0.5.2", path = "../../packages/bindings" }
tg-utils = { version = "0.5.2", path = "../../packages/utils" }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
derivative = "2"
cosmwasm-schema = "1.0.0-beta"
cw-multi-test = "0.11.0"
tg-bindings-test = { version = "0.5.2", path = "../../packages/bindings-test" }
