[package]
name = "tgrade-vesting-account"
version = "0.16.0"
authors = ["Jakub Bogucki <jakub@confio.gmbh>"]
edition = "2018"
description = "Vesting Account as a contract"
repository = "https://github.com/confio/poe-contracts"
homepage = "https://tgrade.finance"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.0"
cw-utils = "0.16.0"
cw2 = "0.16.0"
cw-storage-plus = "1.0.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tg-bindings = { version = "0.16.0", path = "../../packages/bindings" }
tg-utils = { version = "0.16.0", path = "../../packages/utils" }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
derivative = "2"
cosmwasm-schema = "1.1.0"
cw-multi-test = "0.16.2"
tg-bindings-test = { version = "0.16.0", path = "../../packages/bindings-test" }
